[REF] 프로덕션 코드 및 테스트 코드의 전반적인 renaming 및 순서, 로직 리팩토링