@@ -1,31 +1,33 @@
 package racingcar.domain;
 
+import racingcar.error.Validator;
+import racingcar.utils.StringUtils;
+
 import java.util.Collections;
+import java.util.Objects;
 
 public class Car implements Cloneable, Comparable {
-    private static final String BLANK_REGEX = "\\s*";
     private static final int RANDOM_NUM_SCOPE = 10;
     private static final int MIN_NUM_TO_ACCELERATE = 4;
     public static final int MAX_NUM_OF_CAR_NAME = 5;
-
     private final String name;
-    private int position = 0;
+    private int position;
 
-    public Car(String name) {
+    public Car(final String name) {
+        this(name, 0);
+    }
+
+    public Car(final String name, int position) {
+        Validator.checkNull(name);
+        Validator.checkBlank(name);
         checkLengthOfName(name);
-        checkBlank(name);
         this.name = name;
+        this.position = position;
     }
 
     private void checkLengthOfName(String name) {
         if (name.length() > MAX_NUM_OF_CAR_NAME) {
-            throw new IllegalArgumentException(MAX_NUM_OF_CAR_NAME + "자 이하의 자동차 이름을 입력하세요");
-        }
-    }
-
-    private void checkBlank(String name) {
-        if (name.matches(BLANK_REGEX)) {
-            throw new IllegalArgumentException("자동차 이름을 공백으로 입력하지마세요");
+            throw new IllegalArgumentException(MAX_NUM_OF_CAR_NAME + "자 이하의 자동차 이름을 입력해 주세요.");
         }
     }
 
@@ -43,23 +45,33 @@ public class Car implements Cloneable, Comparable {
         return (int) (Math.random() * RANDOM_NUM_SCOPE);
     }
 
+    public boolean isEqualPosition(Car car) {
+        return (car.isEqualPosition(this.position));
+    }
+
     public boolean isEqualPosition(int position) {
         return (this.position == position);
     }
 
-    public boolean isMaxPosition(Car car) {
-        return (this.position == car.getPosition());
+    public String getName() {
+        return this.name;
     }
 
-    @Override
-    public boolean equals(Object object) {
-        Car car = (Car) object;
-        return (this.name.equals(car.getName()));
+    public int getPosition() {
+        return this.position;
     }
 
     @Override
     public String toString() {
         return (getAlignedName() + " : " + getPositionLines());
+    }
+
+    private String getAlignedName() {
+        return String.format("%-" + MAX_NUM_OF_CAR_NAME + "s", this.name);
+    }
+
+    private String getPositionLines() {
+        return String.join("", Collections.nCopies(this.position, "-"));
     }
 
     @Override
@@ -71,22 +83,19 @@ public class Car implements Cloneable, Comparable {
     public int compareTo(Object o) {
         Car car = (Car) o;
         Integer positionToCompare = car.getPosition();
-        return new Integer(this.position).compareTo(positionToCompare);
+        return Integer.valueOf(this.position).compareTo(positionToCompare);
     }
 
-    public String getName() {
-        return this.name;
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
+        Car car = (Car) o;
+        return Objects.equals(name, car.name);
     }
 
-    public int getPosition() {
-        return this.position;
-    }
-
-    public String getAlignedName() {
-        return String.format("%-" + MAX_NUM_OF_CAR_NAME + "s", this.name);
-    }
-
-    private String getPositionLines() {
-        return String.join("", Collections.nCopies(this.position, "-"));
+    @Override
+    public int hashCode() {
+        return Objects.hash(name);
     }
 }
